First commit with unstable WinAppDriver support #80